Troubleshooting calculations with addition of hidden features

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 <h1 id="cost_title">Cost of Your Education</h1>
                 <h2>Please use the following tool to help you plan out projected expenses and income for the duration of your college education.</h2>
 
-                <form id="scholastic-cost">
+                <form id="academic-cost">
                     <!-- College Tuition Section -->
                     <div class="tuition-cost">
                         <p>Total Yearly Tuition Cost</p>
-                        <input type="number" id="yearly-cost" placeholder="Insert Yearly Cost">
+                        <input id="yearly-cost" placeholder="Insert Yearly Cost">
                     </div>
                     <div class="total-college-years">
                         <p>Number of Years at University</p>
@@ -44,66 +44,72 @@
                         </select>
                     </div>
 
-                    <!-- Total Cost of College Tuition -->
-                    <div id="outstanding-balance">
-                        <p>Total Cost of Degree</p>
+                    <!-- Generalized Cost of College Tuition -->
+                    <div id="general-tuition-cost">
+                        <p>General Cost of Degree</p>
                         $<span id="total_tuition_cost"></span>
                     </div>
                 </form>
 
                 <!-- Loan Expenses  -->
-                <div class="loan-expenses">
-                    <h1 id="loan_title">Loan Expenses</h1>
-                    <h2>Due to the high cost of a college education, typically students need to take out a student loan 
-                        to pay for their yearly costs. Use the following section to calculate the projected cost of your 
-                        loan considering different interest rates.
-                    </h2>
-                    <form id="loan-type">
-                        <div class="loan-consider">
-                            <p>What type of loan are you considering?</p>
-                            <select name="hidden_loan_type_description" id="loan_type_selection">
-                                <!-- <option value="hide">Hide</option>
-                                <option value="show">Display</option> -->
-                                <option>None</option>
-                                <option value="0">Undecided</option>
-                                <option value="1">Fixed</option>
-                                <option value="2">Variable</option>
-                            </select>
+                <h1 id="loan_title">Loan Expenses</h1>
+                <h2>Due to the high cost of a college education, typically students need to take out a student loan 
+                    to pay for their yearly costs. Use the following section to calculate the projected cost of your 
+                    loan considering different interest rates.
+                </h2>
+                <form id="loan-consider">
+                    <div class="loan-descriptions">
+                        <p>What type of loan are you considering?</p>
+                        <select name="hidden_loan_type_description" id="loan_type_selection">
+                            <!-- <option value="hide">Hide</option>
+                            <option value="show">Display</option> -->
+                            <option selected disabled hidden>
+                                Select Loan Type
+                            </option>
+                            <option value="0">Undecided</option>
+                            <option value="1">Fixed</option>
+                            <option value="2">Variable</option>
+                        </select>
+                    </div>
+                    
+                    <!-- Hidden Loan Clarifications -->
+                    <div id="hidden_loan_type_description">
+                        <div id="hidden_loan_type_undecided">
+                            <h3>Going to college is a big decision! It's totally understandable that you're undecided. 
+                                Prior to providing you with a loan to pay for your tuition, banks use your families credit score and your own
+                                to estimate your likelihood to pay the full balance. That's why you'll find a range of values online.<br/><br/>
+
+                                <!-- Typically a variable interest rate means that interest rates and monthly payments will change over time. 
+                                Meaning that it could be more expensive or less expensive over time depending on the state of the economy. 
+                                I know! It's crazy that the state of the economy will impact your loan rate. That's why some families
+                                elect to select a fixed rate so that they aren't caught by surprise by changing monthly payments. 
+                                Fixed interest rates impact monthly payments by making them unchanged over time. Meaning that your 
+                                monthly payments don't change throughout the duration of your loan<br/><br/> -->
+                            </h3>
                         </div>
+                        <div id="hidden_loan_type_fixed">
+                            <h3>Fixed rate means that your interest rate will stay fixed until you finish paying off your loan.
+                                So your monthly payments will remain unchanged.
+                            </h3>
+                        </div>
+                        <div id="hidden_loan_type_variable">
+                            <h3>Variable rate means that your interest rate will change for any given month. Your monthly payments could increase
+                                or decrease until you finish paying off your loan.
+                            </h3>
+                        </div>
+                    </div>
+                    <!-- Generalized Cost of College Tuition -->
+                    <div class="loan-expenses">
                         <div id="tuition-interest">
                             <p>What's your projected loan interest?</p>
                             <input type="number" id="loan-interest-value" placeholder="Interest Rate (%)">
                         </div>
-
-                        <!-- Hidden Loan Clarifications -->
-                        <div id="hidden_loan_type_description">
-                            <div id="hidden_loan_type_undecided">
-                                <h3>Going to college is a big decision! It's totally understandable that you're undecided. 
-                                    Prior to providing you with a loan to pay for your tuition, banks use your families credit score and your own
-                                    to estimate your likelihood to pay the full balance. That's why you'll find a range of values online.<br/><br/>
-
-                                    <!-- Typically a variable interest rate means that interest rates and monthly payments will change over time. 
-                                    Meaning that it could be more expensive or less expensive over time depending on the state of the economy. 
-                                    I know! It's crazy that the state of the economy will impact your loan rate. That's why some families
-                                    elect to select a fixed rate so that they aren't caught by surprise by changing monthly payments. 
-                                    Fixed interest rates impact monthly payments by making them unchanged over time. Meaning that your 
-                                    monthly payments don't change throughout the duration of your loan<br/><br/> -->
-                                </h3>
-                            </div>
-                            <div id="hidden_loan_type_fixed">
-                                <h3>Fixed rate means that your interest rate will stay fixed until you finish paying off your loan.
-                                    So your monthly payments will remain unchanged.
-                                </h3>
-                            </div>
-                            <div id="hidden_loan_type_variable">
-                                <h3>Variable rate means that your interest rate will change for any given month. Your monthly payments could increase
-                                    or decrease until you finish paying off your loan.
-                                </h3>
-                            </div>
+                        <div id="tuition-loan-costs">
+                            <p>Scholastic Cost of Degree</p>
+                            $<span id="loan_cost"></span>
                         </div>
-                    </form>
-
-                </div>
+                    </div>
+                </form>
 
                 <hr>
 
