Stylistic changes were made to improve UI

--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
     <main>
         <div class="page-container">
             <div id="content-wrap">
-                <h1 id="cost_title">Cost of Your Education</h1>
+                <!-- Introduction -->
+                <h1 id="main_title">General Cost of Your Education</h1>
                 <h2>Please use the following tool to help you plan out projected expenses and income for the duration of your college education.</h2>
 
+                <!-- College Tuition Section -->
+                <h1 id="tuition_title">Tuition Projected Costs</h1>
                 <form id="academic-cost">
-                    <!-- College Tuition Section -->
                     <div class="tuition-cost">
-                        <p>Total Yearly Tuition Cost</p>
-                        <input type="text" id="yearly-cost" placeholder="Insert Yearly Cost">
+                        <p>Total Yearly Cost</p>
+                        <input type="text" id="yearly-cost" placeholder="Insert Cost">
                     </div>
                     <div class="total-college-years">
                         <p>Number of Years at University</p>
