Added component that calculates total cost of loan minus projected earnings

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <p>What's your projected loan interest?</p>
                         <input type="text" id="loan-interest-value" placeholder="Interest Rate %">
                     </div>
-                    <div id="tuition-loan-costs">
+                    <div id="tuition-loan1">
                         <p>Cost of Degree with Loan Interest</p>
                         $<span id="loan_total_cost"></span>
                     </div>
@@ -178,6 +178,33 @@
                             $<span id="expected_degree_earnings"></span>
                     </div>
                 </div>
+
+                <!-- Calculate Remaining Costs Minus Earnings -->
+                <h1>Final Outstanding Balance</h1>
+                <h2>Considering your total loan cost and income that you're hoping to accumulate, let's use 
+                    the following to project how much you could reduce your loan by when working while going 
+                    to school.</h2>
+                <div id="projected-balance">
+                    <div id="tuition-loan2">
+                        <p>Cost of Degree with Loan Interest</p>
+                        $<span id="loan_total_cost2"></span>
+                    </div>
+                    <div id="degree-earnings2">
+                        <p>Expected Earnings After Completion of Degree</p>
+                            $<span id="expected_degree_earnings2"></span>
+                    </div>
+                    <div class="total-expected-cost">
+                        <div id="final-outstanding-balance">
+                            <p>Total Expected Cost of College Education</p>
+                            $<span id="loan-minus-earnings"></span>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Researching Wage Statistics -->
+
+
 
                     <!-- <div class="total-college-years">
                         <p>Number of Years at University</p>
