Started build for external link to help students research expected wage depending on occupation

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <!-- Calculate Remaining Costs Minus Earnings -->
                 <h1>Final Outstanding Balance</h1>
                 <h2>Considering your total loan cost and income that you're hoping to accumulate, let's use 
-                    the following to project how much you could reduce your loan by when working while going 
+                    the following to estimate how much you could reduce your loan by when working while going 
                     to school.</h2>
                 <div id="projected-balance">
                     <div id="tuition-loan2">
@@ -203,60 +203,16 @@
                 </div>
 
                 <!-- Researching Wage Statistics -->
-
-
-
-                    <!-- <div class="total-college-years">
-                        <p>Number of Years at University</p>
-                        <select id="total-years">
-                            <option selected disabled hidden>
-                                Select
-                            </option>
-                            <option value="5">Undergrad & Masters</option>
-                            <option value="4">Undergrad</option>
-                            <option value="3">Extended Associates Degree</option>
-                            <option value="2">Associates Degree</option>
-                            <option value="1">Certificate</option>
-                        </select>
-                    </div>
-
-                <div class="semesters-worked">
-                    <p>How many semesters are you planning on working?</p>
-                    <select id="num-semesters">
-                        <option selected disabled hidden>
-                            Select
-                        </option>
-                        <option value="8">All semesters (8)</option>
-                        <option value="4">Half of all semesters (4)</option>
-                        <option value="3">Some semesters (2)</option>
-                        <option value="0">None (0)</option>
-                    </select>
+                <h1>Researching Expected Wage Based on Occupation</h1>
+                <h2>Prior to starting your career, it can be helpful to get a general
+                    understanding of how much you could be getting paid to work in a 
+                    specific occupation. Use the following link and steps to calculate
+                    your projected income.
+                </h2>
+                <div id="start-wage-research">
+                    <a href="https://www.bls.gov/oes/current/oes_stru.htm">U.S. Bureau of Labor Statistics</a>
                 </div>
-                <div class="weekly-hours-worked">
-                    <p>What are the total number of hours you're planning on working per week</p>
-                    <select id="hours-worked">
-                        <option selected disabled hidden>
-                            Select
-                        </option>
-                        <option value="40">Full-Time (40hrs)</option>
-                        <option value="20">Part-Time (20hrs)</option>
-                        <option value="10">Here & There (10hrs)</option>
-                        <option value="0">None</option>
-                    </select>
-                </div>
-                <div class="weekly-hourly-rate">
-                    <p>What is your expected hourly rate?</p>
-                    <select id="hourly-rate">
-                        <option selected disabled hidden>
-                            Select
-                        </option>
-                        <option value="20">$20/hr</option>
-                        <option value="18">$18/hr</option>
-                        <option value="16">$16/hr</option>
-                        <option value="14">$14/hr</option>
-                    </select>
-                </div> -->
-                </div>
+
             </div>    
                 
         </div>
