Fixed bug that caused all content to be unformatten when webpage loads

--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
             <div id="content-wrap">
                 <!-- Home Page Intro -->
                 <h1 id="main_page_title">Welcome</h1>
-                <h2 id="main_page_subtitle">The purpose of this tool is to help high school students gain a better understanding of the costs associated with pursuing a college education. Please click one of the tabs below to start your journey.</h2>
+                <h2 id="main_page_subtitle">The purpose of the following tools is to help high school students gain a better understanding of the costs 
+                    associated with pursuing a college education. Please click one of the tabs below to start your journey.</h2>
 
                 <!-- Tab Link Workflow -->
                 <div class="tab">
-                    <button class="tablinks" onclick="openTab(event, 'main_page')" id="defaultOpen">Home</button>
-                    <button class="tablinks" onclick="openTab(event, 'education_cost_calc')">Calculate Education Cost</button>
+                    <!-- <button class="tablinks" onclick="openTab(event, 'main_page')" id="defaultOpen">Home</button> -->
+                    <!-- <button class="tablinks" onclick="openTab(event, 'education_cost_calc')">Calculate Education Cost</button> -->
+                    <button class="tablinks" id="defaultOpen" onclick="openTab(event, 'education_cost_calc')">Calculate Education Cost</button>
                     <button class="tablinks" onclick="openTab(event, 'occupation_proj_research')">Research Occupation Projections</button>
                 </div>
 
