--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
                 <hr id="main_page_break">
 
                 <!-- Tab Link Workflow -->
-                <div class="tab">
-                    <!-- <button class="tablinks" onclick="openTab(event, 'main_page')" id="defaultOpen">Home</button> -->
-                    <!-- <button class="tablinks" onclick="openTab(event, 'education_cost_calc')">Calculate Education Cost</button> -->
+                <div class="main-tab">
                     <button class="tablinks" onclick="openTab(event, 'education_cost_calc')">Calculate Education Cost</button>
                     <button class="tablinks" id="defaultOpen" onclick="openTab(event, 'occupation_proj_research')">Research Occupation Projections</button>
                 </div>
@@ -232,14 +230,22 @@
                     <hr id="start-research">
 
                     <div id="wage-research-reality">
-                        <div class="research-instructions">
+                        <div class="research-instructions" >
                             <h1>Choose Your Own Journey</h1>
+                            <h2 id="desc-research-instructions1">Time for you to learn how to research what your salary could be depending on the occupation that you pursue. There are currently three
+                                journeys below. The first two will provide you with guidance on how to find specific information on how much those occupations make annually
+                                based on national public resources. It's recommended that you go down one of those two paths first so that you can get a feel for how to collect the information
+                                that you're looking for.
+                            </h2>
+                            <h2 id="desc-research-instructions2">The last path involves acquiring more information on the occupation that you're pursuing so that you can compare you're expected 
+                                annual salary versus your future actual annual salary.
+                            </h2>
                             <div class="research-tab">
-                                <button class="tablinks" id="defaultOpen" onclick="openTab(event, 'research-journey1')">Software Developer</button>
-                                <button class="tablinks" onclick="openTab(event, 'research-journey2')">Market Research Analyst</button>
-                                <button class="tablinks" onclick="openTab(event, 'research-journey3')" id="defaultOpen">Removing Training Wheels</button>
+                                <button class="researchlinks" id="defaultOpen" onclick="researchingTabs(event, 'research-journey1')">Software Developer</button>
+                                <button class="researchlinks" onclick="researchingTabs(event, 'research-journey2')">Market Research Analyst</button>
+                                <button class="researchlinks" onclick="researchingTabs(event, 'research-journey3')" id="defaultOpen">Removing Training Wheels</button>
                             </div>
-                            <div class="research-journey1">
+                            <div id="research-journey1" class="research-content">
                                 <h2 id="research-journey1-title">For this example we'll get information on a <b>Software Developer</b>. According to the BLS, they create computer applications that
                                     allow users to do specific tasks and the underlying systems that run the devices and control networks. This market is set to grow at 25%
                                     over the next 10 years, which is much faster than the national average.
@@ -259,8 +265,19 @@
                                         <input type="text" id="occupation-reg-ex-p1" placeholder="Mean Annual Salary">
                                     </div>
                                 </div>
+                                <ul id="research-journey1-instructions">
+                                    <li>If you were pursuing a Software Engineering degree, an occupation that you could pursue is one as a <b>Software Developer</b>. 
+                                        Click on the link to the <a href="https://www.bls.gov/oes/current/oes_stru.htm" id="outbound-occupation-url" target="_blank" rel="noopener noreferrer">U.S. Bureau of Labor Statistics website.</a></li>
+                                    <li>Click on the <b>Computer and Mathematical Occupations</b> major group category. The major group are then broken up into sub-categories. Navigate to 
+                                        <b>15-1252 Software Developers</b> and click the corresponding link.                                
+                                    </li>
+                                    <li>Scroll down to the first table. Jot down the <b>Mean Annual Wage</b> that you find in the table above. This is the occupations national average annual salary.</li>
+                                    <li>Now we're going to review the areas with the highest employment level in this occuption. Use <b>Ctl+F</b> or <b>Command+F</b> 
+                                        option to search for <i>"Metropolitan areas with the highest employment level in Software Developers".</i></li>
+                                    <li>Jot down the <b>Regional Mean Annual Wage</b> for this occupation using the closest Metropolitan Area to your location in the table above.</li>
+                                </ul>
                             </div>
-                            <div class="research-journey2">
+                            <div id="research-journey2" class="research-content">
                                 <h2 id="research-journey2-title">For this example we'll be getting information on a <b>Market Research Analyst</b>. According to the BLS, they help companies
                                     understand what products people want, who will buy them, and at what price. This market is set to grow at 15% over the next 10
                                     years, which is much faster than the national average.
@@ -286,16 +303,16 @@
                                     <li>Click on the <b>Business and Financial Operations Occupations</b> major group category. The major group are then broken up into sub-categories. Scroll down to 
                                         <b>13-1161 Market Research Analysts and Marketing Specialists</b> and click the corresponding link.                                
                                     </li>
-                                    <li>Scroll down to the first table. Jot down the <b>Mean Annual Wage</b> in the table above. This is the occupations national average annual salary.</li>
+                                    <li>Scroll down to the first table. Jot down the <b>Mean Annual Wage</b> that you find in the table above. This is the occupations national average annual salary.</li>
                                     <li>Now we're going to review the areas with the highest employment level in this occuption. Use <b>Ctl+F</b> or <b>Command+F</b> 
                                         option to search for <i>"Metropolitan areas with the highest employment level in Market Research Analysts and Marketing Specialists".</i></li>
                                     <li>Jot down the <b>Regional Mean Annual Wage</b> for this occupation using the closest Metropolitan Area to your location in the table above.</li>
                                 </ul>
                             </div>
                             
-                            <div class="research-journey3">
-                                <h2 id="research-instructions-subtitle-p1">Time for you to do your own research. Use the U.S. Bureau of Labor Statistics (BLS) website to uncover how much you'd be making 
-                                    if you were pursuing a specific occupation. We're going to walk you through a couple of examples.
+                            <div id="research-journey3" class="research-content">
+                                <h2 id="research-journey3-title">Time for you to do your own research. Use the U.S. Bureau of Labor Statistics (BLS) website to uncover how much you'd be making 
+                                    if you were pursuing the occupation that you listed above. Use the previous examples workflow for your own scenario.
                                     <i>Having two tabs open are going to be helpful for you to follow the next steps.</i> 
                                 </h2>
                                 <h2>Use the elements below to store the values that you find during your research.</h2>
@@ -313,19 +330,7 @@
                                         <input type="text" id="occupation-reg-ex-p1" placeholder="Mean Annual Salary">
                                     </div>
                                 </div>
-                            </div>
-                            <ul id="research-journey1-instructions">
-                                <li>If you were pursuing a Business Administrative degree, a occupation that you could pursue is a 
-                                    <b>Market Research Analyst</b>. Click on the link to the <a href="https://www.bls.gov/oes/current/oes_stru.htm" id="outbound-occupation-url" target="_blank" rel="noopener noreferrer">U.S. Bureau of Labor Statistics website.</a></li>
-                                <li>Click on the <b>Business and Financial Operations Occupations</b> major group category. The major group are then broken up into sub-categories. Scroll down to 
-                                    <b>13-1161 Market Research Analysts and Marketing Specialists</b> and click the corresponding link.                                
-                                </li>
-                                <li>Scroll down to the first table. Jot down the <b>Mean Annual Wage</b> in the table above. This is the occupations national average annual salary.</li>
-                                <li>Now we're going to review the areas with the highest employment level in this occuption. Use <b>Ctl+F</b> or <b>Command+F</b> 
-                                    option to search for <i>"Metropolitan areas with the highest employment level in Market Research Analysts and Marketing Specialists".</i></li>
-                                <li>Jot down the <b>Regional Mean Annual Wage</b> for this occupation using the closest Metropolitan Area to your location in the table above.</li>
-                            </ul>
-                            
+                            </div>                            
                         </div>
                     </div>
                 </div>
