Media config was created to view website on mobile

--- a/index.html
+++ b/index.html
@@ -352,15 +352,15 @@
                                 <div class="wage-research-inputs" id="wage-research-ex-p3">
                                     <div id="occupation-title-ex-p3">
                                         <p>Occupation Title</p>
-                                        <input type="text" id="occupation-title-ex-p3" placeholder="Occupation Name">
+                                        <input type="text" class="wage-research-subinputs" id="occupation-title-ex-p3" placeholder="Occupation Name">
                                     </div>
                                     <div class="occupation-salary-ex-p3">
                                         <p>National Annual Salary</p>
-                                        <input type="text" id="occupation-nat-ex-p3" placeholder="Mean Annual Salary">
+                                        <input type="text" class="wage-research-subinputs" id="occupation-nat-ex-p3" placeholder="Mean Annual Salary">
                                     </div>
                                     <div class="occupation-salary-ex-p3">
                                         <p>Regional Annual Salary</p>
-                                        <input type="text" id="occupation-reg-ex-p3" placeholder="Mean Annual Salary">
+                                        <input type="text" class="wage-research-subinputs" id="occupation-reg-ex-p3" placeholder="Mean Annual Salary">
                                     </div>
                                 </div>
 
