--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <title>College Expectation Setter</title>
-    <meta name="viwport" content="width-device-width, intial-scale=1.0" />
+    <meta name="viewport" content="width=device-width" intial-scale=1.0 />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
@@ -352,15 +352,18 @@
                                 <div class="wage-research-inputs" id="wage-research-ex-p3">
                                     <div id="occupation-title-ex-p3">
                                         <p>Occupation Title</p>
-                                        <input type="text" class="wage-research-subinputs" id="occupation-title-ex-p3" placeholder="Occupation Name">
+                                        <input type="text" class="wage-research-subinputs" id="occupation-title-ex-p3"
+                                            placeholder="Occupation Name">
                                     </div>
                                     <div class="occupation-salary-ex-p3">
                                         <p>National Annual Salary</p>
-                                        <input type="text" class="wage-research-subinputs" id="occupation-nat-ex-p3" placeholder="Mean Annual Salary">
+                                        <input type="text" class="wage-research-subinputs" id="occupation-nat-ex-p3"
+                                            placeholder="Mean Annual Salary">
                                     </div>
                                     <div class="occupation-salary-ex-p3">
                                         <p>Regional Annual Salary</p>
-                                        <input type="text" class="wage-research-subinputs" id="occupation-reg-ex-p3" placeholder="Mean Annual Salary">
+                                        <input type="text" class="wage-research-subinputs" id="occupation-reg-ex-p3"
+                                            placeholder="Mean Annual Salary">
                                     </div>
                                 </div>
 
@@ -375,7 +378,7 @@
     <footer>
         &copy; 2023 MTurra All rights reserved
     </footer>
-    <script type="module" src="index.js"></script>
+    <!-- <script type="module" src="index.js"></script> -->
 </body>
 
 </html>
